--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         include:
           - build_variant: "mt7621-usb-2"
-            targets: "RE-SP-01B"
+            targets: "JDCLOUD-RE-SP-01B"
     steps:
       - uses: actions/checkout@v2
       - name: Prepare environment
